--- a/www/index.html
+++ b/www/index.html
@@ -48,7 +48,7 @@
 
       <div class="navbar navbar-app navbar-absolute-bottom">
         <div class="btn-group justified">
-          <a href="#/" class="btn btn-navbar"><i class="glyphicon glyphicon-home"></i> Recording</a>
+          <a href="#/" class="btn btn-navbar"><i class="fa fa-home fa-navbar"></i> Recording</a>
           <a href="#/" class="btn btn-navbar"><i class="glyphicon glyphicon-list"></i> Projects</a>
           <a href="#/" class="btn btn-navbar"><i class="glyphicon glyphicon-dashboard"></i> Dashboard</a>
           <a href="#/editUser" class="btn btn-navbar"><i class="glyphicon glyphicon-cog"></i> Settings</a>
