--- a/www/index.html
+++ b/www/index.html
@@ -50,7 +50,7 @@
         <div class="btn-group justified">
           <a href="#/" class="btn btn-navbar"><i class="fa fa-home fa-navbar"></i> Recording</a>
           <a href="#/" class="btn btn-navbar"><i class="glyphicon glyphicon-list"></i> Projects</a>
-          <a href="#/" class="btn btn-navbar"><i class="glyphicon glyphicon-dashboard"></i> Dashboard</a>
+          <a href="#/dashboard" class="btn btn-navbar"><i class="glyphicon glyphicon-dashboard"></i> Dashboard</a>
           <a href="#/editUser" class="btn btn-navbar"><i class="glyphicon glyphicon-cog"></i> Settings</a>
         </div>
       </div>
